Fix cover size on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,13 @@ div .page {
   height: 600px;
 }
 
+@media (max-width: 800px){
+  div .page {
+    width: 300px;
+    height: 300px;
+  }
+}
+
 div .photo-book {
   max-width: 30rem;
   width: 100%;
